Issue #2818253 by pifagor, sneha_surve, bandanasharma: Missing space between buttons in .form-actions

--- a/starterkits/less/less/component/form.less
+++ b/starterkits/less/less/component/form.less
@@ -78,3 +78,8 @@
   height: 7px;
   width: 10px;
 }
+
+// Form action buttons.
+.form-actions .btn {
+  margin-right: 10px;
+}
